2011-09-21  Kaz Kylheku  <kaz@kylheku.com>

	Semantics tweak: short circuiting behavior for @(all) and @(none).

	* match.c (match_files): Added a couple of break statements.

	* txr.1: Updated.

2011-09-22  Kaz Kylheku  <kaz@kylheku.com>

	Version 036

	Extension to @(skip).

	* txr.c (version): Bumped to 036.

	* txr.1: Set version to 036.

	* configure: Bumped txr_ver to 036.

2011-09-22  Kaz Kylheku  <kaz@kylheku.com>

	Useful second argument in skip directive for skipping
	a minimum number of lines.

	* match.c (match_files): New behavior in skip_s case.

	* txr.1: Documented.

2010-10-05  Kaz Kylheku  <kkylheku@gmail.com>

	Version 035

	Fixes garbage-collection-related problem affecting @(freeform)
	that was revealed by "make tests" on x86-64 system, gcc 4.3.2.

	Fixes show-stopper stupidity, again: a query that matches 
	the end of data terminates successfully rather than failing.  This
	is because version 032 did not properly address the breakage
	introduced in the 2010-01-21 change to match.c involving the dataline
	variable. The "fix" only prevented the program from aborting in that
	situation.

	* txr.c (version): Bumped to 035.

	* txr.1: Set version to 035.

	* configure: Bumped txr_ver to 035.

2010-10-04  Kaz Kylheku  <kkylheku@gmail.com>

	* match.c (match_files): Bugfix. A (sub)query that runs out of data
	lines to match must fail. Extra data lines relative to the spec
	are tolerated; extra spec lines unmet by data aren't.

2010-10-03  Kaz Kylheku  <kkylheku@gmail.com>

	* lib.h (lazy_string): Fix incorrect comment.

	* lib.c (split_str, split_str_set): It is necessary to protect input
	parameters against GC, because we cache their internal pointers,
	after which we no longer refer to the objects themselves. Moreover,
	we perform object allocation, and then keep using the internal
	pointers.

2010-09-30  Kaz Kylheku  <kkylheku@gmail.com>

	* txr.1: Fix formatting problem.

2010-03-01  Kaz Kylheku  <kkylheku@gmail.com>
